# api

./: .env.example  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
migrations/: 20250723090611_create_schemas_table.sql  20250723090852_create_fields_table.sql  20250729131400_create_users_table.sql  20250730100026_create_sessions_table.sql
src/: lib.rs  main.rs
src/config/: mod.rs
src/constant/: mod.rs
src/context/: mod.rs
src/domain/: mod.rs
src/domain/auth/: http.rs  mod.rs  model.rs  service.rs
src/domain/data/: http.rs  model.rs  repository.rs  repository_impl.rs  service.rs  validate.rs
src/domain/field/: http.rs  model.rs  repository.rs  repository_impl.rs  service.rs
src/domain/schema/: http.rs  mod.rs  model.rs  repository.rs  repository_impl.rs  service.rs  validate.rs
src/domain/session/: mod.rs  model.rs  repository.rs  repository_impl.rs  service.rs
src/domain/user/: mod.rs  model.rs  repository.rs  repository_impl.rs
src/domains/schemas/: http.rs
src/http/: mod.rs
src/util/: error.rs  hash.rs  http.rs  jwt.rs  mod.rs  paginator.rs  validator.rs
tests/: auth_test.rs  data_test.rs  field_test.rs  schema_test.rs
tests/common/: mod.rs
tests/seedings/: 001_schemas.sql  002_fields.sql  003_users.sql  004_data.sql
