[package]
name = "sevria-api"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum-test = "17.3.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
envconfig = "0.11.0"
fake = { version = "4.3.0", features = ["derive"] }
log = "0.4.27"
nanoid = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
